Added seller, products and other page with all api

--- a/src/app/components/view-products/view-products.component.html
+++ b/src/app/components/view-products/view-products.component.html
@@ -41,7 +41,7 @@
                   <span class="badge bg-warning text-dark">L3:</span> {{ getPriceLevel(product, 3, 'quantity') }}
                 </td>
                 <td class="text-center">
-                  <button class="btn btn-warning btn-sm" (click)="editProduct(product)">
+                  <button class="btn btn-sm btn-danger" (click)="editProduct(product)">
                     <i class="bi bi-pencil-square me-1"></i>Edit
                   </button>
                 </td>
