--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-sidebar></app-sidebar>
+<div *ngIf="isLoginPage" class="content p-4 flex-grow-1">
+    <router-outlet></router-outlet>
+</div>
+  
+<div *ngIf="!isLoginPage">
+    <app-sidebar></app-sidebar>
+</div>  
+
