--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isLoginPage" class="content p-4 flex-grow-1">
+<div *ngIf="isLoginPage">
     <router-outlet></router-outlet>
 </div>
   
