--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <!-- Sidebar -->
     <div class="sidebar bg-dark text-white p-3" style="width: 280px; flex-shrink: 0; overflow-y: auto; height: 100%;">
         <div class="d-flex flex-column h-100">
-            <h4 class="mb-4 text-center">Admin Panel</h4>
+            <h4 class="mb-4 text-center">BioTradX Admin</h4>
             <ul class="nav flex-column list-unstyled flex-grow-1">
                 <li class="nav-item">
                     <a class="nav-link text-white" routerLink="/dashboard" routerLinkActive="active">
@@ -37,6 +37,11 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" routerLink="/view-products" routerLinkActive="active">
                         <i class="bi bi-box-seam me-2"></i> View All Products
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/view-ongoingorders" routerLinkActive="active">
+                        <i class="bi bi-box-seam me-2"></i> View OnGoing Orders
                     </a>
                 </li>
             </ul>
