--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -8,3 +8,20 @@
   .card[style*="cursor: pointer"] {
     transition: all 0.3s ease;
   }
+
+  .cursor-pointer {
+  cursor: pointer !important;
+}
+
+.card.cursor-pointer:hover {
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.15) !important;
+}
+
+::ng-deep .custom-dialog-container {
+  border-radius: 12px;
+}
+
+::ng-deep .custom-dialog-container .mat-dialog-container {
+  padding: 0;
+  border-radius: 12px;
+}
